--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,13 @@ repositories {
 publishing {
     repositories {
         maven {
-            url System.getenv("https://mymavenrepo.com/repo/wNYXCYiD5duElCg9hCgq/")
+            url 'https://mymavenrepo.com/repo/wNYXCYiD5duElCg9hCgq/'
             credentials {
-                username System.getenv("myMavenRepo")
-                password System.getenv("123456789")
+                username 'myMavenRepo'
+                password '123456789'
             }
         }
     }
-
     publications {
         maven(MavenPublication) {
             from components.java
